# tollgate-lab

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
environments/: physical-lab.yaml  router-only.yaml
tests/: test_cloud.py  test_deploy.py  test_deploy_helpers.py  test_fips_integration.py  test_hardware_lock.py  test_labgrid_drivers.py  test_package.py  test_router.py  test_serial.py  test_ssh.py  test_strategy.py  test_tollgate_integration.py
tests/fips/: test_fips_on_router.py
tollgate_lab/: __init__.py  conftest.py  public.py
tollgate_lab/cloud/: __init__.py  gcp.py  provider.py  qemu.py  shc.py
tollgate_lab/deploy/: ci_artifact.py  fips.py  tollgate.py
tollgate_lab/drivers/: android_adb.py  esp_flash.py  fips_service.py  fipsctl.py  labgrid_router.py  playwright_browser.py  router.py  serial_console.py  ssh.py
tollgate_lab/fixtures/: sessions.py
tollgate_lab/hardware/: __init__.py  lock.py
tollgate_lab/reporting/: nostr_events.py
tollgate_lab/strategy/: __init__.py  openwrt.py
